@@ -28,11 +28,26 @@ USAGE: see `condarc_EXAMPLE file <condarc_EXAMPLE>`_
 .. code-block:: bash
 
     # CONDA_REPO_DIR:
-    # directory in which conda ready build packages are located: in the arch subfolders
+    # directory in which conda build packages are located: in the 
+    # architecture subfolders
     # useful if one wants one common conda_repo folder for 
     # different conda installation (defaults to: *CONDA ROOT/conda-bld)
     conda_repo_dir: /home/0_CONDA_RELATED_0/conda-repo
 
+
+conda_sources_dir
+=================
+
+USAGE: see `condarc_EXAMPLE file <condarc_EXAMPLE>`_
+
+.. code-block:: bash
+
+    # CONDA_REPO_DIR:
+    # directory in which conda build packages are located: in the 
+    # architecture subfolders
+    # useful if one wants one common conda_repo folder for 
+    # different conda installation (defaults to: *CONDA ROOT/conda-bld)
+    conda_repo_dir: /home/0_CONDA_RELATED_0/conda-repo
 |
 |
 |
