@@ -57,7 +57,18 @@ track_features: mkl
 conda_recipes_dir: /home/0_CONDA_RELATED_0/conda-recipes
 
 # CONDA_REPO_DIR:
-# directory in which conda build packages are located: in the architecture subfolders
+# directory in which conda build packages are located: in the 
+# architecture subfolders
 # useful if one wants one common conda_repo folder for 
 # different conda installation (defaults to: *CONDA ROOT/conda-bld)
 conda_repo_dir: /home/0_CONDA_RELATED_0/conda-repo
+
+# CONDA_SOURCES_DIR:
+# directory in which conda downloaded sources are located: 
+# in the subfolders: for there source type
+# src_cache, git_cache, hg_cache, svn_cache ect...
+# useful if one wants one common conda_sources folder for 
+# different conda installation (defaults to: *CONDA ROOT/conda-bld)
+# IMPORTANT: you must have write permission to the whole path:
+# otherwise: ERROR: Permission denied.
+conda_sources_dir: /home/0_CONDA_RELATED_0/conda_sources
